subida de prueba de Proyecto Final

--- a/disenios_disponibles.html
+++ b/disenios_disponibles.html
@@ -43,7 +43,6 @@
             <span class="navbar-toggler-icon">
               <img
                 src="img/hamburguerButton.png"
-                class="w-40"
                 alt="ícono de botón hamburguesa"
               />
             </span>
@@ -108,19 +107,19 @@
       >
         <section class="galeria_disenios">
           <div>
-            <h1>
-              Te ofrezco una gran variedad de diseños exclusivos que voy
+            <h2>
+              Te ofrezco una variedad de diseños exclusivos que voy
               actualizando constantemente! Para más información, suscribite a mi
-              <a href="faqs_contacto.html">Newsletter</a>
-            </h1>
+            </h2>
+            <a href="faqs_contacto.html">Newsletter</a>
           </div>
           <!-- Inicia carousel 1 -->
+          <p class="encabezadoCarousel">Serie Flores</p>
           <div
             id="carouselExampleControls"
             class="carousel slide"
             data-bs-ride="carousel"
           >
-            <p class="encabezadoCarousel">Serie Flores</p>
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="img/cactus.png" alt="imagen de estampado cactus" />
@@ -171,12 +170,12 @@
           </div>
           <!-- Ends carousel 1 -->
           <!-- Inicia carousel 2 -->
+          <p class="encabezadoCarousel">Serie Gatitos</p>
           <div
-            id="carouselExampleControls"
+            id="carouselExampleControls2"
             class="carousel slide"
             data-bs-ride="carousel"
           >
-            <p class="encabezadoCarousel">Serie Gatitos</p>
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img
@@ -210,7 +209,7 @@
             <button
               class="carousel-control-prev"
               type="button"
-              data-bs-target="#carouselExampleControls"
+              data-bs-target="#carouselExampleControls2"
               data-bs-slide="prev"
             >
               <span
@@ -222,7 +221,7 @@
             <button
               class="carousel-control-next"
               type="button"
-              data-bs-target="#carouselExampleControls"
+              data-bs-target="#carouselExampleControls2"
               data-bs-slide="next"
             >
               <span
@@ -234,12 +233,12 @@
           </div>
           <!-- Ends carousel 2 -->
           <!-- Inicia carousel 3 -->
+          <p class="encabezadoCarousel">Serie Perritos</p>
           <div
-            id="carouselExampleControls"
+            id="carouselExampleControls3"
             class="carousel slide"
             data-bs-ride="carousel"
           >
-            <p class="encabezadoCarousel">Serie Perritos</p>
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img
@@ -273,7 +272,7 @@
             <button
               class="carousel-control-prev"
               type="button"
-              data-bs-target="#carouselExampleControls"
+              data-bs-target="#carouselExampleControls3"
               data-bs-slide="prev"
             >
               <span
@@ -285,7 +284,7 @@
             <button
               class="carousel-control-next"
               type="button"
-              data-bs-target="#carouselExampleControls"
+              data-bs-target="#carouselExampleControls3"
               data-bs-slide="next"
             >
               <span
@@ -297,12 +296,14 @@
           </div>
           <!-- Ends carousel 3 -->
           <!-- Inicia carousel 4 -->
+          <p class="encabezadoCarousel">Serie Objetos</p>
+
           <div
-            id="carouselExampleControls"
+            id="carouselExampleControls4"
             class="carousel slide"
             data-bs-ride="carousel"
           >
-            <p class="encabezadoCarousel">Serie Objetos</p>
+
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img
@@ -336,7 +337,7 @@
             <button
               class="carousel-control-prev"
               type="button"
-              data-bs-target="#carouselExampleControls"
+              data-bs-target="#carouselExampleControls4"
               data-bs-slide="prev"
             >
               <span
@@ -348,7 +349,7 @@
             <button
               class="carousel-control-next"
               type="button"
-              data-bs-target="#carouselExampleControls"
+              data-bs-target="#carouselExampleControls4"
               data-bs-slide="next"
             >
               <span
