--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -44,7 +44,6 @@
             <span class="navbar-toggler-icon">
               <img
                 src="img/hamburguerButton.png"
-                class="w-40"
                 alt="ícono de botón hamburguesa"
               />
             </span>
@@ -107,8 +106,8 @@
         class="text-center animate__animated animate__fadeIn"
         id="productos"
       >
+      <h1>Un poco más sobre mí</h1>
         <article class="sobreMi__article">
-          <h1>Un poco más sobre mí</h1>
           <a href="">
             <img
               src="img/marian.png"
@@ -117,17 +116,12 @@
             />
           </a>
           Hola! Muchas gracias por visitar la página de mi emprendimiento :) Soy
-          Mariana López Saraví, Licenciada en Gestión de Agroalimentos. Desde
-          pequeña me apasionan la costura y el tejido. Cuando empecé la
-          facultad, me di cuenta de lo feliz que me hacía tener accesorios de
-          cursada (cuadernos, agendas, carteras, bolsos) copados y
-          personalizados para alegrar la rutina universitaria. Esto me llevó a
-          plasmar uno de mis pasatiempos en este hermoso emprendimiento, donde
-          busco constantemente crear nuevos diseños que se adapten a las
-          necesidades y preferencias de las personas que me rodean. Los
-          estampados que trabajo son 100% originales, creados por diseñadores
-          independientes. Te invito a que conozcas mis productos, ideales para
-          regalar o regalarte!
+          Mariana López Saraví, Licenciada en Gestión de Agroalimentos. En mi
+          tiempo libre, me gusta diseñar, coser y tejer. Es por eso que decidí
+          plasmar este pasatiempo en un hermoso emprendimiento, donde busco
+          crear artículos que se adapten a las necesidade de las personas que me
+          rodean. Te invito a que conozcas mis productos,
+          ideales para regalar o regalarte!
         </article>
       </main>
       <footer class="footer" id="footer">
