--- a/faqs_contacto.html
+++ b/faqs_contacto.html
@@ -41,7 +41,10 @@
             aria-label="Toggle navigation"
           >
             <span class="navbar-toggler-icon">
-              <img src="img/hamburguerButton.png" class="w-40" alt="ícono de botón hamburguesa">
+              <img
+                src="img/hamburguerButton.png"
+                alt="ícono de botón hamburguesa"
+              />
             </span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -100,11 +103,11 @@
       </nav>
       <main id="productos">
         <section
-          class="py-3 bg-light preguntasFrecuentes__article animate__animated animate__fadeInLeft"
+          class="py-3 preguntasFrecuentes__article animate__animated animate__fadeInLeft"
         >
           <div class="container-fluid">
             <div class="row">
-              <h2>Preguntas Frecuentes</h2>
+              <h1>Preguntas Frecuentes</h1>
               <!-- inicia card 1 -->
               <article class="col-sm-12 col-md-6 col-lg-6">
                 <div class="card">
@@ -118,7 +121,7 @@
                     <p class="card-text">
                       <p>1. Hacé click en "Agregar Artículo" para agregar producto al carrito de compras
                       </p>
-                      <p>2. Cuando hayas terminado el pedido, hacé click en "Iniciar Compra"
+                      <p>2. Al finalizar el pedido, hacé click en "Iniciar Compra"
                       </p>
                       <p>3. Completá tus datos de contacto y hacé click en "Continuar"
                       </p>
@@ -142,29 +145,31 @@
                       <p>5. Seleccioná el medio de pago</p>
                       <p>6. Antes de finalizar la compra, verificá que todos los datos informados sean correctos</p>
                       <p>7. Hacé click en "Finalizar Compra" y listo! </p>
-                      <p> Aclaración: tené en cuenta que tu pedido estará listo en 10 días aproximadamente (una vez que esté listo, te voy a contactar por mail!)</p>
                     </p>
                   </div>
                 </div>
               </article>
               <!-- ends card 2-->
+              </span>
             </div>
           </div>
         </section>
-
+        <span>
+          <p>Aclaración: tu pedido estará listo en 10 días aproximadamente</p>
+        </span>
         <section class="section_contacto">
           <section
-            class="bg-light p-2 container-fluid animate__animated animate__fadeInRight"
+            class="p-2 container-fluid animate__animated animate__fadeInRight"
           >
             <div class="row">
-              <article class="col-sm-12 col-md-6 col-lg-6 p-1" id="formularioContacto">
-                <h2>Contacto</h2>
+              <h2>Contacto</h2>
+              <article class="col-sm-12 col-md-6 col-lg-6" id="formularioContacto">
                 <form>
                   <div class="form-group row">
                     <label for="inputName" class="col-sm-2 col-form-label"
                       >Nombre</label
                     >
-                    <div class="col-sm-10">
+                    <div class="col-sm-6">
                       <input
                         type="name"
                         class="form-control"
@@ -177,7 +182,7 @@
                     <label for="inputPassword3" class="col-sm-2 col-form-label"
                       >Email</label
                     >
-                    <div class="col-sm-10">
+                    <div class="col-sm-6">
                       <input
                         type="email"
                         class="form-control"
@@ -221,7 +226,7 @@
                         <textarea
                           name="comentario"
                           id="comentario"
-                          cols="50"
+                          cols="40"
                           rows="3"
                           placeholder="Escribí acá tus comentarios adicionales"
                         ></textarea>
