--- a/faqs_contacto.html
+++ b/faqs_contacto.html
@@ -242,7 +242,7 @@
                 </form>
               </article>
               <!-- ends form-->
-              <article class="col-sm-12 col-md-6 col-lg-6">
+              <article class="col-sm-12 col-md-6 col-lg-6" id="imgFormulario">
                 <img
                 src="img/contactoFormulario.png"
                 alt="foto de mariana"
