--- a/productos.html
+++ b/productos.html
@@ -99,15 +99,19 @@
 <!-- inicia nav 2 -->
       <nav id="filtros" class="nav2 animate__animated animate__fadeInLeft">
         <div class="estampadosNav2">
-          <span><h3>Productos</h3></span>
-          <form>
-            <select name="productos" id="productos">
-                <option value="cartucheras">Cartucheras</option>
-                <option value="Agendas 2022">Agendas 2022</option>
-                <option value="combos_mes">Combos Especiales</option>
-            </select>
-        </form>
-          <span><h3>Diseños</h3></span>
+          <div>
+            <span><h3>Productos</h3></span>
+            <form>
+              <select name="productos" id="productos">
+                  <option value="cartucheras">Cartucheras</option>
+                  <option value="Agendas 2022">Agendas 2022</option>
+                  <option value="combos_mes">Combos Especiales</option>
+              </select>
+          </form>
+          </div>
+      <div>
+        <span><h3>Diseños</h3></span>
+        <div class="checkboxDiseños">
           <span> 
             <input type="checkbox" value="flores" id="flores" name="flores">
             <label for="flores">Flores</label>
@@ -124,6 +128,8 @@
             <input type="checkbox" value="objetos" id="objetos" name="objetos">
             <label for="objetos">Objetos</label>
           </span>
+        </div>
+      </div>
         </div>
       </nav>
 <!-- ends nav 2 -->
