--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -115,11 +115,11 @@
               class="sobreMi__article--fotoMarian"
             />
           </a>
-          Hola! Muchas gracias por visitar la página de mi emprendimiento :) Soy
+          Hola! Muchas gracias por visitar mi página :) Soy
           Mariana López Saraví, Licenciada en Gestión de Agroalimentos. En mi
           tiempo libre, me gusta diseñar, coser y tejer. Es por eso que decidí
           plasmar este pasatiempo en un hermoso emprendimiento, donde busco
-          crear artículos que se adapten a las necesidade de las personas que me
+          crear artículos que se adapten a las necesidades de las personas que me
           rodean. Te invito a que conozcas mis productos,
           ideales para regalar o regalarte!
         </article>
