--- a/test.html
+++ b/test.html
@@ -1,10 +1,32 @@
-<div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Dropdown button
-    </button>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <li><a class="dropdown-item" href="#">Action</a></li>
-      <li><a class="dropdown-item" href="#">Another action</a></li>
-      <li><a class="dropdown-item" href="#">Something else here</a></li>
-    </ul>
+<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+  <div class="container">
+     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+        aria-expanded="false" aria-label="Toggle navigation">
+     <span class="navbar-toggler-icon"></span>
+     </button>
+     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+           <li class="nav-item active">
+              <a class="nav-link">Home
+              <span class="sr-only">(current)</span>
+              </a>
+           </li>
+           <li class="nav-item">
+              <a class="nav-link">Vans</a>
+           </li>
+           <li class="nav-item">
+              <a class="nav-link">Contract</a>
+           </li>
+           <li class="nav-item">
+              <a class="nav-link">About</a>
+           </li>
+           <li class="nav-item">
+              <a class="nav-link">App</a>
+           </li>
+        </ul>
+     </div>
+     <form class="form-inline my-2 my-lg-0">
+        <a class="btn btn-outline-primary btn-book my-2 my-sm-0" >Book</a>
+     </form>
   </div>
+</nav>
