--- a/faqs_contacto.html
+++ b/faqs_contacto.html
@@ -103,8 +103,8 @@
       </nav>
       <main id="productos">
         <section
-          class="py-3 preguntasFrecuentes__article animate__animated animate__fadeInLeft"
-        >
+          class="py-3 animate__animated animate__fadeInLeft"
+        id="preguntasFrecuentes">
           <div class="container-fluid">
             <div class="row">
               <h1>Preguntas Frecuentes</h1>
@@ -119,11 +119,11 @@
                   <div class="card-body">
                     <h4 class="card-title">Cómo Comprar</h4>
                     <p class="card-text">
-                      <p>1. Hacé click en "Agregar Artículo" para agregar producto al carrito de compras
+                      <p>1. Hacé click en <b>"Agregar Artículo"</b> para agregar producto al carrito de compras
                       </p>
-                      <p>2. Al finalizar el pedido, hacé click en "Iniciar Compra"
+                      <p>2. Al finalizar el pedido, hacé click en <b>"Iniciar Compra"</b>
                       </p>
-                      <p>3. Completá tus datos de contacto y hacé click en "Continuar"
+                      <p>3. Completá tus datos de contacto y hacé click en <b>"Continuar"</b> 
                       </p>
                     </p>
                   </div>
@@ -144,7 +144,7 @@
                       <p>4. Ingresá tu código postal y seleccioná el método de envío que prefieras</p>
                       <p>5. Seleccioná el medio de pago</p>
                       <p>6. Antes de finalizar la compra, verificá que todos los datos informados sean correctos</p>
-                      <p>7. Hacé click en "Finalizar Compra" y listo! </p>
+                      <p>7. Hacé click en <b>"Finalizar Compra"</b>y listo! </p>
                     </p>
                   </div>
                 </div>
