--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -106,7 +106,7 @@
         class="text-center animate__animated animate__fadeIn"
         id="productos"
       >
-      <h1>Un poco más sobre mí</h1>
+        <h1>Un poco más sobre mí</h1>
         <article class="sobreMi__article">
           <a href="">
             <img
@@ -115,13 +115,15 @@
               class="sobreMi__article--fotoMarian"
             />
           </a>
-          Hola! Muchas gracias por visitar mi página :) Soy
-          Mariana López Saraví, Licenciada en Gestión de Agroalimentos. En mi
-          tiempo libre, me gusta diseñar, coser y tejer. Es por eso que decidí
-          plasmar este pasatiempo en un hermoso emprendimiento, donde busco
-          crear artículos que se adapten a las necesidades de las personas que me
-          rodean. Te invito a que conozcas mis productos,
-          ideales para regalar o regalarte!
+          Hola! Muchas gracias por visitar mi página :) Soy Mariana López
+          Saraví, Licenciada en Gestión de Agroalimentos. En mi tiempo libre, me
+          gusta diseñar, coser y tejer. Es por eso que decidí plasmar este
+          pasatiempo en un hermoso emprendimiento, donde busco crear artículos
+          que se adapten a las necesidades de las personas que me rodean.
+          <b
+            >Te invito a que conozcas mis productos, ideales para regalar o
+            regalarte!</b
+          >
         </article>
       </main>
       <footer class="footer" id="footer">
