--- a/faqs_contacto.html
+++ b/faqs_contacto.html
@@ -108,18 +108,17 @@
           <div class="container-fluid">
             <div class="row">
               <h1>Preguntas Frecuentes</h1>
-              <!-- inicia card 1 -->
               <article class="col-sm-12 col-md-6 col-lg-6">
                 <div class="card">
                   <img
                     src="img/armarPedido.png"
                     class="card-img-top w-50"
-                    alt="..."
+                    alt="dibujo de carrito de compras con corazón rosa"
                   />
                   <div class="card-body">
                     <h4 class="card-title">Cómo Comprar</h4>
                     <p class="card-text">
-                      <p>1. Hacé click en <b>"Agregar Artículo"</b> para agregar producto al carrito de compras
+                      <p>1. Hacé click en <b>"Agregar Artículo"</b> para sumar producto al carrito de compras
                       </p>
                       <p>2. Al finalizar el pedido, hacé click en <b>"Iniciar Compra"</b>
                       </p>
@@ -129,14 +128,12 @@
                   </div>
                 </div>
               </article>
-              <!-- ends card 1 -->
-              <!-- inicia card 2 -->
               <article class="col-sm-12 col-md-6 col-lg-6">
                 <div class="card">
                   <img
                     src="img/faqs_pago_envio.png"
                     class="card-img-top w-50"
-                    alt="..."
+                    alt="detalle de íconos de tarjetas de crédito y bancos aceptados junto con ilustración de camión de envíos"
                   />
                   <div class="card-body">
                     <h4 class="card-title">Modalidades Pago y Envío</h4>
@@ -149,12 +146,11 @@
                   </div>
                 </div>
               </article>
-              <!-- ends card 2-->
               </span>
             </div>
           </div>
         </section>
-        <span>
+        <span class="animate__animated animate__fadeIn">
           <p>Aclaración: tu pedido estará listo en 10 días aproximadamente</p>
         </span>
         <section class="section_contacto">
@@ -241,7 +237,6 @@
                   </div>
                 </form>
               </article>
-              <!-- ends form-->
               <article class="col-sm-12 col-md-6 col-lg-6" id="imgFormulario">
                 <img
                 src="img/contactoFormulario.png"
@@ -250,7 +245,6 @@
                 />
               </article>
             </div>
-            <!-- ends row-->
           </section>
         </section>
       </main>
@@ -296,8 +290,6 @@
         </div>
       </footer>
     </div>
-    <!-- fin del contenedor-->
-    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
