--- a/productos.html
+++ b/productos.html
@@ -19,9 +19,8 @@
       <header class="encabezado__box" id="header">
         Envío GRATIS con compras mayores a $3.000!
       </header>
-<!-- inicia nav 1 -->
 <nav class="navbar navbar-expand-lg bg-nav" id="nav1">
-  <div class="container-fluid">
+  <div class="container-fluid catalogoProductos">
     <a class="navbar-brand" href="index.html">
       <img src="img/logo.png" alt="logo de MLS creaciones" />
     </a>
@@ -95,8 +94,6 @@
     </div>
   </div>
 </nav>
-<!-- ends nav 1 -->
-<!-- inicia nav 2 -->
       <nav id="filtros" class="nav2 animate__animated animate__fadeInLeft">
         <div class="estampadosNav2">
           <div>
@@ -132,9 +129,7 @@
       </div>
         </div>
       </nav>
-<!-- ends nav 2 -->
       <main class="p-3" id="productos">
-        <!-- inician productos -->
         <section class="py-3 animate__animated animate__fadeIn">
           <div class="container-fluid">
             <h2>Cartucheras <a href="disenios_disponibles.html">(Estampado a Elección)</a></h2>
@@ -154,7 +149,6 @@
                     <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
               </article>
-              <!-- ends box 1 -->
 
               <article class="col-md-6 col-lg-3 pb-3 text-center">
                 <div class="card">
@@ -170,7 +164,6 @@
                     <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
               </article>
-              <!-- ends box 2 -->
 
               <article class="col-md-6 col-lg-3 pb-3 text-center">
                 <div class="card">
@@ -186,7 +179,6 @@
                     <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
               </article>
-              <!-- ends box 3 -->
 
               <article class="col-md-6 col-lg-3 pb-3 text-center">
                 <div class="card">
@@ -202,11 +194,8 @@
                     <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
               </article>
-              <!-- ends box 4 -->
             </div>
-            <!-- ends row-->
           </div>
-          <!-- ends container-->
         </section>
 
         <section class="py-3 animate__animated animate__fadeIn">
@@ -226,7 +215,6 @@
                     <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
               </article>
-              <!-- ends box 1 -->
 
               <article class="col-md-6 col-lg-3 pb-3 text-center">
                 <div class="card">
@@ -241,7 +229,6 @@
                     <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
               </article>
-              <!-- ends box 2 -->
 
               <article class="col-md-6 col-lg-3 pb-3 text-center">
                 <div class="card">
@@ -256,7 +243,6 @@
                     <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
               </article>
-              <!-- ends box 3 -->
 
               <article class="col-md-6 col-lg-3 pb-3 text-center">
                 <div class="card">
@@ -271,11 +257,8 @@
                     <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
               </article>
-              <!-- ends box 4 -->
             </div>
-            <!-- ends row-->
           </div>
-          <!-- ends container-->
         </section>
 
         <section class="py-3 animate__animated animate__fadeIn">
@@ -297,7 +280,6 @@
                   </div>
               </div>
               </article>
-              <!-- ends box 1 -->
 
               <article class="col-md-6 col-lg-3 pb-3 text-center">
                 <div class="card">
@@ -314,7 +296,6 @@
                   </div>
               </div>
               </article>
-              <!-- ends box 2 -->
 
               <article class="col-md-6 col-lg-3 pb-3 text-center">
                 <div class="card">
@@ -333,7 +314,6 @@
                   </div>
               </div>
               </article>
-              <!-- ends box 3 -->
 
               <article class="col-md-6 col-lg-3 pb-3 text-center">
                 <div class="card">
@@ -351,11 +331,8 @@
                   </div>
               </div>
               </article>
-              <!-- ends box 4 -->
             </div>
-            <!-- ends row-->
           </div>
-          <!-- ends container-->
         </section>
       </main>
       <aside id="aside" class="nav2 animate__animated animate__fadeInRight">
@@ -429,8 +406,6 @@
         </div>
       </footer>
     </div>
-    <!-- fin del contenedor-->
-    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
