--- a/disenios_disponibles.html
+++ b/disenios_disponibles.html
@@ -108,12 +108,11 @@
         <section class="galeria_disenios">
           <div>
             <h2>
-              Te ofrezco una variedad de diseños exclusivos que voy
-              actualizando constantemente! Para más información, suscribite a mi
+              Te ofrezco una variedad de diseños exclusivos que voy actualizando
+              constantemente! Para más información, suscribite a mi
             </h2>
             <a href="faqs_contacto.html">Newsletter</a>
           </div>
-          <!-- Inicia carousel 1 -->
           <p class="encabezadoCarousel">Serie Flores</p>
           <div
             id="carouselExampleControls"
@@ -168,8 +167,6 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-          <!-- Ends carousel 1 -->
-          <!-- Inicia carousel 2 -->
           <p class="encabezadoCarousel">Serie Gatitos</p>
           <div
             id="carouselExampleControls2"
@@ -231,8 +228,6 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-          <!-- Ends carousel 2 -->
-          <!-- Inicia carousel 3 -->
           <p class="encabezadoCarousel">Serie Perritos</p>
           <div
             id="carouselExampleControls3"
@@ -294,8 +289,6 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-          <!-- Ends carousel 3 -->
-          <!-- Inicia carousel 4 -->
           <p class="encabezadoCarousel">Serie Objetos</p>
 
           <div
@@ -303,7 +296,6 @@
             class="carousel slide"
             data-bs-ride="carousel"
           >
-
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img
@@ -359,7 +351,6 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-          <!-- Ends carousel 4 -->
         </section>
       </main>
       <footer class="footer" id="footer">
@@ -404,8 +395,6 @@
         </div>
       </footer>
     </div>
-    <!-- fin del contenedor-->
-    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
