--- a/index.html
+++ b/index.html
@@ -105,57 +105,60 @@
         </div>
       </nav>
       <main class="text-center" id="productos">
-        <h1>Bienvenid@s a MLS Creaciones!</h1>
-        <div
-          id="carouselExampleSlidesOnly"
-          class="carousel slide"
-          data-bs-ride="carousel"
-        >
-          <div class="carousel-index">
-            <div class="carousel-item active">
-              <img
-                src="img/index1.png"
-                class="d-block w-40"
-                alt="imagen de cartu neceser y florero decorativo"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="img/index2.png"
-                class="d-block w-40"
-                alt="imagen de combo matero que incluye bolso, porta yerba y porta azúcar"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="img/index4.png"
-                class="d-block w-40"
-                alt="imagen de Mariana con bolsito sosteniendo lona con estampado floral y bolsito A4 de fondo"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="img/index3.png"
-                class="d-block w-40"
-                alt="imagen de tres cartucheras modelo sobre"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="img/index5.png"
-                class="d-block w-40"
-                alt="imagen de tres modelos de agendas"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="img/index6.png"
-                class="d-block w-40"
-                alt=".imagen de Mariana con máquina de coser"
-              />
+        <div class="carousel-index">
+          <h1>Bienvenid@s a MLS Creaciones!</h1>
+          <div
+            id="carouselExampleSlidesOnly"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel">
+              <div class="carousel-item active">
+                <img
+                  src="img/index1.png"
+                  class="d-block w-40"
+                  alt="imagen de cartu neceser y florero decorativo"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="img/index2.png"
+                  class="d-block w-40"
+                  alt="imagen de combo matero que incluye bolso, porta yerba y porta azúcar"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="img/index4.png"
+                  class="d-block w-40"
+                  alt="imagen de Mariana con bolsito sosteniendo lona con estampado floral y bolsito A4 de fondo"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="img/index3.png"
+                  class="d-block w-40"
+                  alt="imagen de tres cartucheras modelo sobre"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="img/index5.png"
+                  class="d-block w-40"
+                  alt="imagen de tres modelos de agendas"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="img/index6.png"
+                  class="d-block w-40"
+                  alt="imagen de Mariana con máquina de coser"
+                />
+              </div>
             </div>
           </div>
         </div>
+        
       </main>
       <footer class="footer" id="footer">
         <div>
@@ -199,8 +202,6 @@
         </div>
       </footer>
     </div>
-    <!-- fin del contenedor-->
-    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
