Subida de Proyecto Final v5

--- a/productos.html
+++ b/productos.html
@@ -325,7 +325,7 @@
                   <div class="card-body">
                     <h4 class="card-title">Combo Clean</h4>
                     <p class="size">
-                    Cestito + Jabón Artesanal (Consultar Stock)</p>
+                    Cestito + Jabón Artesanal a elección </p>
                     <p class="price">$800</p>
                     <a href="" class="btn w-100">Agregar Artículo</a>
                   </div>
