--- a/faqs_contacto.html
+++ b/faqs_contacto.html
@@ -108,11 +108,10 @@
           <div class="container-fluid">
             <div class="row">
               <h1>Preguntas Frecuentes</h1>
-              <article class="col-sm-12 col-md-6 col-lg-6">
-                <div class="card">
+              <article class="col-sm-12 col-md-5 col-lg-5 cardFaqs1">
+                <div>
                   <img
                     src="img/armarPedido.png"
-                    class="card-img-top w-50"
                     alt="dibujo de carrito de compras con corazón rosa"
                   />
                   <div class="card-body">
@@ -128,11 +127,10 @@
                   </div>
                 </div>
               </article>
-              <article class="col-sm-12 col-md-6 col-lg-6">
-                <div class="card">
+              <article class="col-sm-12 col-md-5 col-lg-5 cardFaqs2">
+                <div>
                   <img
                     src="img/faqs_pago_envio.png"
-                    class="card-img-top w-50"
                     alt="detalle de íconos de tarjetas de crédito y bancos aceptados junto con ilustración de camión de envíos"
                   />
                   <div class="card-body">
@@ -146,107 +144,104 @@
                   </div>
                 </div>
               </article>
-              </span>
             </div>
           </div>
         </section>
-        <span class="animate__animated animate__fadeIn">
+        <div class="animate__animated animate__fadeIn cuadroAclaracion">
           <p>Aclaración: tu pedido estará listo en 10 días aproximadamente</p>
-        </span>
-        <section class="section_contacto">
+
+        </div>
+        <h2>Contacto</h2>
           <section
-            class="p-2 container-fluid animate__animated animate__fadeInRight"
+            class="container-fluid animate__animated animate__fadeInRight row"
+            id="formularioContacto"
           >
-            <div class="row">
-              <h2>Contacto</h2>
-              <article class="col-sm-12 col-md-6 col-lg-6" id="formularioContacto">
-                <form>
-                  <div class="form-group row">
-                    <label for="inputName" class="col-sm-2 col-form-label"
-                      >Nombre</label
-                    >
-                    <div class="col-sm-6">
-                      <input
-                        type="name"
-                        class="form-control"
-                        id="inputName"
-                        placeholder="Tu Nombre"
-                      />
-                    </div>
-                  </div>
-                  <div class="form-group row">
-                    <label for="inputPassword3" class="col-sm-2 col-form-label"
-                      >Email</label
-                    >
-                    <div class="col-sm-6">
-                      <input
-                        type="email"
-                        class="form-control"
-                        id="inputEmail"
-                        placeholder="Tu Email"
-                      />
-                    </div>
-                  </div>
-                  <fieldset class="form-group">
-                    <div class="row p-3">
-                      <legend class="col-form-label col-sm-12 pt-0">
-                        Querés suscribirte a mi Newsletter para acceder a
-                        promociones exclusivas?
-                      </legend>
-                      <div class="col-sm-10">
-                        <div class="form-check">
-                          <input
-                            class="form-check-input"
-                            type="radio"
-                            name="gridRadios"
-                            id="gridRadios1"
-                            value="option1"
-                            checked
-                          />
-                          <label class="form-check-label" for="gridRadios1">
-                            Estoy interesad@!
-                          </label>
-                        </div>
-                        <div class="form-check">
-                          <input
-                            class="form-check-input"
-                            type="radio"
-                            name="gridRadios"
-                            id="gridRadios2"
-                            value="option2"
-                          />
-                          <label class="form-check-label" for="gridRadios2">
-                            Por el momento no :)
-                          </label>
-                        </div>
-                        <textarea
-                          name="comentario"
-                          id="comentario"
-                          cols="40"
-                          rows="3"
-                          placeholder="Escribí acá tus comentarios adicionales"
-                        ></textarea>
+                <article class="col-sm-10 col-md-6 col-lg-6">
+                  <form>
+                    <div class="form-group row">
+                      <label for="inputName" class="col-sm-2 col-form-label"
+                        >Nombre</label
+                      >
+                      <div class="col-sm-6">
+                        <input
+                          type="name"
+                          class="form-control"
+                          id="inputName"
+                          placeholder="Tu Nombre"
+                        />
                       </div>
                     </div>
-                  </fieldset>
-                  <div class="form-group row">
-                    <div class="col-sm-10">
-                      <button type="submit" class="btn-submit"><a href="error404.html">Enviar</a></button>
-                      <button type="reset" class="btn-reset">Cancelar</button>
+                    <div class="form-group row">
+                      <label for="inputPassword3" class="col-sm-2 col-form-label"
+                        >Email</label
+                      >
+                      <div class="col-sm-6">
+                        <input
+                          type="email"
+                          class="form-control"
+                          id="inputEmail"
+                          placeholder="Tu Email"
+                        />
+                      </div>
                     </div>
-                  </div>
-                </form>
-              </article>
-              <article class="col-sm-12 col-md-6 col-lg-6" id="imgFormulario">
-                <img
-                src="img/contactoFormulario.png"
-                alt="foto de mariana"
-                  class="img-thumbnail"
-                />
-              </article>
-            </div>
+                    <fieldset class="form-group">
+                      <div class="row">
+                        <legend class="col-form-label col-sm-12">
+                          Querés suscribirte a mi Newsletter para acceder a
+                          promociones exclusivas?
+                        </legend>
+                        <div class="col-sm-10">
+                          <div class="form-check">
+                            <input
+                              class="form-check-input"
+                              type="radio"
+                              name="gridRadios"
+                              id="gridRadios1"
+                              value="option1"
+                              checked
+                            />
+                            <label class="form-check-label" for="gridRadios1">
+                              Estoy interesad@!
+                            </label>
+                          </div>
+                          <div class="form-check">
+                            <input
+                              class="form-check-input"
+                              type="radio"
+                              name="gridRadios"
+                              id="gridRadios2"
+                              value="option2"
+                            />
+                            <label class="form-check-label" for="gridRadios2">
+                              Por el momento no :)
+                            </label>
+                          </div>
+                          <textarea
+                            name="comentario"
+                            id="comentario"
+                            cols="40"
+                            rows="3"
+                            placeholder="Escribí acá tus comentarios adicionales"
+                          ></textarea>
+                        </div>
+                      </div>
+                    </fieldset>
+                    <div class="form-group row">
+                      <div class="col-sm-10">
+                        <button type="submit" class="btn-submit"><a href="error404.html">Enviar</a></button>
+                        <button type="reset" class="btn-reset">Cancelar</button>
+                      </div>
+                    </div>
+                  </form>
+                </article>
+                <article class="col-sm-10 col-md-6 col-lg-6">
+                  <img
+                  src="img/contactoFormulario.png"
+                  alt="foto de mariana"
+                    class="img-thumbnail"
+                  />
+                </article>
           </section>
-        </section>
       </main>
       <footer class="footer" id="footer">
         <div>
