Subida de Proyecto Final v6

--- a/faqs_contacto.html
+++ b/faqs_contacto.html
@@ -107,7 +107,7 @@
         id="preguntasFrecuentes">
           <div class="container-fluid">
             <div class="row">
-              <h1>Preguntas Frecuentes</h1>
+              <h2>Preguntas Frecuentes</h2>
               <article class="col-sm-12 col-md-5 col-lg-5 cardFaqs1">
                 <div>
                   <img
@@ -151,7 +151,7 @@
           <p>Aclaración: tu pedido estará listo en 10 días aproximadamente</p>
 
         </div>
-        <h2>Contacto</h2>
+        <div class="animate__animated animate__fadeInRight"><h2>Contacto</h2></div>
           <section
             class="container-fluid animate__animated animate__fadeInRight row"
             id="formularioContacto"
