Subida de Proyecto Final v7

--- a/productos.html
+++ b/productos.html
@@ -20,7 +20,7 @@
         Envío GRATIS con compras mayores a $3.000!
       </header>
 <nav class="navbar navbar-expand-lg bg-nav" id="nav1">
-  <div class="container-fluid catalogoProductos">
+  <div class="container-fluid">
     <a class="navbar-brand" href="index.html">
       <img src="img/logo.png" alt="logo de MLS creaciones" />
     </a>
@@ -129,9 +129,9 @@
       </div>
         </div>
       </nav>
-      <main class="p-3" id="productos">
-        <section class="py-3 animate__animated animate__fadeIn">
-          <div class="container-fluid">
+      <main id="productos">
+        <section class="p-4 animate__animated animate__fadeIn">
+          <div>
             <h2>Cartucheras <a href="disenios_disponibles.html">(Estampado a Elección)</a></h2>
               <h3>Medidas expresadas en (largo x alto x ancho) cm</h3>
               <div class="row">
@@ -198,8 +198,8 @@
           </div>
         </section>
 
-        <section class="py-3 animate__animated animate__fadeIn">
-          <div class="container-fluid">
+        <section class="p-4 animate__animated animate__fadeIn">
+          <div>
             <h2 class="text-center">Agendas 2022</h2>
             <div class="row">
               <article class="col-md-6 col-lg-3 pb-3 text-center">
@@ -261,8 +261,8 @@
           </div>
         </section>
 
-        <section class="py-3 animate__animated animate__fadeIn">
-          <div class="container-fluid">
+        <section class="p-4 animate__animated animate__fadeIn">
+          <div>
             <h2 class="text-center">Combos Especiales (Edición Limitada!)<a href="disenios_disponibles.html">(Estampado a Elección)</a></h2>
             <div class="row">
               <article class="col-md-6 col-lg-3 pb-3 text-center">
