--- a/faqs_contacto.html
+++ b/faqs_contacto.html
@@ -106,7 +106,7 @@
           class="py-3 animate__animated animate__fadeInLeft"
         id="preguntasFrecuentes">
           <div class="container-fluid">
-            <div class="row">
+            <div class="row p-3">
               <h2>Preguntas Frecuentes</h2>
               <article class="col-sm-12 col-md-5 col-lg-5 cardFaqs1">
                 <div>
